--- a/com.tp.sms/pom.xml
+++ b/com.tp.sms/pom.xml
@@ -4,13 +4,15 @@
   <artifactId>com.tp.sms</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
-  <properties>
-		<maven.compiler.target>1.8</maven.compiler.target>
-		<maven.compiler.source>1.8</maven.compiler.source>
-	</properties>
-	
     
    <dependencies>
+  
+  <dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.30</version>
+    <scope>provided</scope>
+</dependency>
   
   <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 <dependency>
